fix: add extra padding for h1 anchors

--- a/content/assets/stylesheets/_typography.scss
+++ b/content/assets/stylesheets/_typography.scss
@@ -1,5 +1,5 @@
 ---
-version: 12
+version: 13
 ---
 
 @import 'variables';
@@ -263,6 +263,7 @@ version: 12
     );
     @include gl-fluid-line-height($min: $gl-line-height-36, $max: $gl-line-height-52);
     @include gl-mt-0;
+    padding-top: 3.3rem;
   }
 
   h2,
@@ -387,7 +388,7 @@ version: 12
     font-size: 2rem;
     line-height: 1;
     margin-bottom: 1.5rem;
-    margin-top: 3.3rem;
+    margin-top: 1.3rem;
   }
   @media screen and (min-width: $bp-sm) {
     h1 {
